# Hostel-ERP

./: CMakeLists.txt  README.md  addcomplaint.cpp  addcomplaint.h  addcomplaint.ui  addfee.cpp  addfee.h  addfee.ui  addroom.cpp  addroom.h  addroom.ui  addstudent.cpp  addstudent.h  addstudent.ui  forgotpassworddialog.cpp  forgotpassworddialog.h  forgotpassworddialog.ui  hostelERP.db  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewcomplaint.cpp  viewcomplaint.h  viewcomplaint.ui  viewfee.cpp  viewfee.h  viewfee.ui  viewroom.cpp  viewroom.h  viewroom.ui  viewstudents.cpp  viewstudents.h  viewstudents.ui
